# JniHelpers

./: CMakeLists.txt  build.sh
src/fancy/: PassUtil.cpp  cn_fancylab_util_NativePassUtil.h
src/hashlib/: crc32.cpp  digest.cpp  md5.h  sha1.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h
tests/: tests.cpp
